<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>gams::studio::project::ProjectOptions</class>
 <widget class="QWidget" name="gams::studio::project::ProjectOptions">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>566</width>
    <height>264</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Project Options</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <item>
    <widget class="QFrame" name="frame">
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Sunken</enum>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
      <item row="3" column="1">
       <widget class="QLabel" name="laBaseDir">
        <property name="text">
         <string>Base directory</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="QLabel" name="label">
        <property name="text">
         <string>Name</string>
        </property>
       </widget>
      </item>
      <item row="3" column="3">
       <widget class="QToolButton" name="bBaseDir">
        <property name="text">
         <string/>
        </property>
        <property name="icon">
         <iconset resource="../../icons/icons.qrc">
          <normaloff>:/solid/folder-open-bw</normaloff>:/solid/folder-open-bw</iconset>
        </property>
       </widget>
      </item>
      <item row="2" column="3">
       <widget class="QToolButton" name="bWorkDir">
        <property name="text">
         <string/>
        </property>
        <property name="icon">
         <iconset resource="../../icons/icons.qrc">
          <normaloff>:/solid/folder-open-bw</normaloff>:/solid/folder-open-bw</iconset>
        </property>
       </widget>
      </item>
      <item row="4" column="1">
       <widget class="QLabel" name="label_3">
        <property name="text">
         <string>Main GMS</string>
        </property>
       </widget>
      </item>
      <item row="5" column="2">
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>0</height>
         </size>
        </property>
       </spacer>
      </item>
      <item row="4" column="2">
       <widget class="QLineEdit" name="edMainGms"/>
      </item>
      <item row="1" column="2">
       <widget class="QLineEdit" name="edName"/>
      </item>
      <item row="2" column="1">
       <widget class="QLabel" name="laWorkDir">
        <property name="text">
         <string>Working directory</string>
        </property>
       </widget>
      </item>
      <item row="2" column="2">
       <widget class="QLineEdit" name="edWorkDir"/>
      </item>
      <item row="3" column="2">
       <widget class="QLineEdit" name="edBaseDir"/>
      </item>
      <item row="0" column="1">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>Project file</string>
        </property>
       </widget>
      </item>
      <item row="0" column="2">
       <widget class="QLineEdit" name="edProjectFile"/>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <tabstops>
  <tabstop>edProjectFile</tabstop>
  <tabstop>edName</tabstop>
  <tabstop>edWorkDir</tabstop>
  <tabstop>bWorkDir</tabstop>
  <tabstop>edBaseDir</tabstop>
  <tabstop>bBaseDir</tabstop>
  <tabstop>edMainGms</tabstop>
 </tabstops>
 <resources>
  <include location="../../icons/icons.qrc"/>
 </resources>
 <connections/>
</ui>
